--- a/Projet_BDR/Projet_BDR/Pages/Equipe/Index.razor
+++ b/Projet_BDR/Projet_BDR/Pages/Equipe/Index.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager NavigationManager
 <h3>Listes des équipes 
     <a class="btn btn-primary" href="equipe/add">
-        Ajouter une équipe
+        <span class="oi oi-plus"></span>
     </a>
 </h3>
 <table class="table">
