--- a/Projet_BDR/Projet_BDR/Pages/Joueur/Add.razor
+++ b/Projet_BDR/Projet_BDR/Pages/Joueur/Add.razor
@@ -30,7 +30,7 @@
 				<input form="Salaire" class="form-control" @bind="@joueur.Salaire"/>
 			</div>
 			<div class="form-group">
-				<label for="idPays" class="control-label">Pays</label>f
+				<label for="idPays" class="control-label">Pays</label>
 				<select form="idPays" id="pays" class="form-control" name="pays" @bind="@joueur.IdPays">
 					@foreach(Pays p in pays)
 					{
@@ -40,8 +40,9 @@
 			</div>
 
 			<div class="form-group">
-				<label for="idEquipe" class="control-label">Pays</label>
+				<label for="idEquipe" class="control-label">Equipe</label>
 				<select form="idEquipe" class="form-control" id="equipe" name="equipe" @bind="@joueur.IdEquipe">
+					<option value=""></option>
 					@foreach (Equipe e in equipes)
 					{
 						<option value="@e.Id">@e.Nom</option>
