--- a/Projet_BDR/Projet_BDR/Pages/Joueur/Index.razor
+++ b/Projet_BDR/Projet_BDR/Pages/Joueur/Index.razor
@@ -5,7 +5,7 @@
 
 <h3>Listes des joueurs 
     <a class="btn btn-primary" href="joueur/add">
-        Ajouter un joueur
+        <span class="oi oi-plus"></span>
     </a>
 </h3>
 <table class="table">
@@ -31,7 +31,14 @@
                 <td>@j.DateNaissance</td>
                 <td>@j.Salaire</td>
                 <td>@PaysService.GetName(j.IdPays)</td>
-                <td>@EquipeService.GetName(j.IdEquipe)</td>
+                @if(j.IdEquipe == null)
+                {
+                    <td></td>
+                }
+                else
+                {
+                    <td>@EquipeService.GetName((Int16)j.IdEquipe)</td>                    
+                }
                 <td>
                     <a class="btn btn-light" href="joueur/update/@j.Id"><span class="oi oi-pencil"></span></a>
                     <a class="btn btn-danger" href="joueur/delete/@j.Id"><span class="oi oi-delete"></span></a>
