--- a/Projet_BDR/Projet_BDR/Pages/Joueur/Update.razor
+++ b/Projet_BDR/Projet_BDR/Pages/Joueur/Update.razor
@@ -38,8 +38,9 @@
 			</div>
 
 			<div class="form-group">
-				<label for="idEquipe" class="control-label">Pays</label>
+				<label for="idEquipe" class="control-label">Equipe</label>
 				<select form="idEquipe" class="form-control" id="equipe" name="equipe" @bind="@joueur.IdEquipe">
+					<option value=""></option>
 					@foreach (Equipe e in equipes)
 					{
 						<option value="@e.Id">@e.Nom</option>
