--- a/BlazorApp/Projet_BDR/Pages/Joueur/Add.razor
+++ b/BlazorApp/Projet_BDR/Pages/Joueur/Add.razor
@@ -38,17 +38,6 @@
 					}
 				</select>
 			</div>
-
-			<div class="form-group">
-				<label for="idEquipe" class="control-label">Equipe</label>
-				<select form="idEquipe" class="form-control" id="equipe" name="equipe" @bind="@joueur.IdEquipe">
-					<option value=""></option>
-					@foreach (Equipe e in equipes)
-					{
-						<option value="@e.Id">@e.Nom</option>
-					}
-				</select>
-			</div>
 		</div>
 	</div>
 	<br />
@@ -75,6 +64,7 @@
 
 	protected void AddJoueur()
 	{
+		joueur.IdEquipe = null;
 		JoueurService.Add(joueur);
 		End();
 
