--- a/BlazorApp/Projet_BDR/Pages/Equipe/Index.razor
+++ b/BlazorApp/Projet_BDR/Pages/Equipe/Index.razor
@@ -5,7 +5,11 @@
     <a class="btn btn-primary" href="equipe/add">
         <span class="oi oi-plus"></span>
     </a>
+    <a class="btn btn-primary" href="equipe/classement">
+        Classement
+    </a>
 </h3>
+
 <table class="table">
     <thead>
         <tr>
