--- a/BlazorApp/Projet_BDR/Shared/NavMenu.razor
+++ b/BlazorApp/Projet_BDR/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi" aria-hidden="true"></span> Joueurs
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="arme">
+                <span class="oi" aria-hidden="true"></span> Armes
+            </NavLink>
+        </div>
     </nav>
 </div>
 
