view pour les stat d'équipe et joueur

--- a/BlazorApp/Projet_BDR/Pages/Joueur/Inspect.razor
+++ b/BlazorApp/Projet_BDR/Pages/Joueur/Inspect.razor
@@ -40,7 +40,6 @@
 @if(vjs == null)
 {
     <h4>Pas de statistique diponible pour le joueur</h4>
-    <br />
 } 
 else
 {
@@ -61,10 +60,8 @@ else
             </tr>
         </tbody>
     </table>
-    <br />
 }
-
-
+<br />
 <h4>Liste des agents favoris</h4>
 <table class="table">
     <thead>
@@ -87,7 +84,7 @@ else
 <div class="row">
     <div class="col-md-4">
         <div class="form-group">
-            <input type="button" class="btn btn-secondary" @onclick="@End" value="Annuler" />
+            <input type="button" class="btn btn-secondary" @onclick="@End" value="Retour" />
         </div>
     </div>
 </div>
