--- a/BlazorApp/Projet_BDR/Pages/Equipe/Inspect.razor
+++ b/BlazorApp/Projet_BDR/Pages/Equipe/Inspect.razor
@@ -30,6 +30,32 @@
         }
     </tbody>
 </table>
+<br />
+@if (ves == null)
+{
+    <h3>Aucune statistique disponible pour l'équipe</h3>
+}
+else
+{
+    <h3>Statistique de l'équipe</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Nombre de tournois jouées</th>
+                <th>Nombre de matchs jouées</th>
+                <th>Nombre de matchs gagnées</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>@ves.NombreTournoiJouer</th>
+                <th>@ves.NombreMatchJouer</th>
+                <th>@ves.NombreMatchGagnee</th>
+            </tr>
+        </tbody>
+    </table>
+}
+
 <div class="row">
     <div class="col-md-4">
         <div class="form-group">
@@ -42,11 +68,13 @@
     [Parameter]
     public string id { get; set; }
     Equipe equipe = new Equipe();
+    VEquipeStat ves;
     Joueur[]? joueurs;
     protected override void OnInitialized()
     {
-        this.equipe = EquipeService.GetById(Int16.Parse(id));
+        equipe = EquipeService.GetById(Int16.Parse(id));
         joueurs = EquipeService.GetJoueurs(Int16.Parse(id));
+        ves = EquipeService.GetStatById(Int16.Parse(id));
     }
     protected void End()
     {
