statistique d'équipe + classemement par stat

--- a/BlazorApp/Projet_BDR/Pages/Equipe/Index.razor
+++ b/BlazorApp/Projet_BDR/Pages/Equipe/Index.razor
@@ -6,7 +6,10 @@
         <span class="oi oi-plus"></span>
     </a>
     <a class="btn btn-primary" href="equipe/classement">
-        Classement
+        Classement élo
+    </a>
+    <a class="btn btn-primary" href="equipe/stat">
+        Classement statistique
     </a>
 </h3>
 
