--- a/BlazorApp/Projet_BDR/_Imports.razor
+++ b/BlazorApp/Projet_BDR/_Imports.razor
@@ -1,4 +1,6 @@
 ﻿@using System.Net.Http
+@using System.Numerics
+@using System.Collections.Generic;
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
