--- a/BlazorApp/Projet_BDR/Pages/Tournoi/Inspect.razor
+++ b/BlazorApp/Projet_BDR/Pages/Tournoi/Inspect.razor
@@ -1,5 +1,7 @@
 ﻿@page "/tournoi/{id}"
 @inject EquipeService EquipeService
+@inject ArmeService ArmeService
+@inject CarteService CarteService
 @inject PaysService PaysService
 @inject TournoiService TournoiService
 @inject NavigationManager NavigationManager
@@ -16,8 +18,11 @@
 {
     <h3>
         Liste des matchs
-        <a class="btn btn-primary" href="tournoi/@tournoi.Id/simulate">
-            <span class="oi oi-media-play"> Simulation</span>
+        <a class="btn btn-primary" @onclick="@SimulateOnce">
+            <span class="oi oi-media-play"> Simuler le prochain match</span>
+        </a>
+        <a class="btn btn-primary" @onclick="@SimulateAll">
+            <span class="oi oi-media-skip-forward"> Simuler tout les matchs</span>
         </a>
     </h3>
     <table class="table">
@@ -35,9 +40,12 @@
                     <th>@m.NoMatch</th>
                     <th>@m.NomEquipeGauche vs @m.NomEquipeDroite</th>
                     <th>
-                        <a class="btn btn-light" href="match/@id/@m.NoMatch">
-                            <span class="oi oi-magnifying-glass"></span>
-                        </a>
+                        @if(m.IdEquipeGauche != null && m.IdEquipeDroite != null)
+                        {
+                            <a class="btn btn-light" href="match/@id/@m.NoMatch">
+                                <span class="oi oi-magnifying-glass"></span>
+                            </a>                            
+                        }
                     </th>
                 </tr>
             }
@@ -103,5 +111,94 @@
     protected void End()
     {
         NavigationManager.NavigateTo("");
+    }
+
+    protected void SimulateOnce()
+    {
+        // trouver le prochain match à joueur
+        Match next = TournoiService.GetNextMatch(Int16.Parse(id));
+        Int16 NoManche = 1;
+        Int16 NoRound = 1;
+        Int16 NoKill = 1;
+        List<Carte> cartes = CarteService.GetAll().ToList();
+        Random rng= new Random();
+        Joueur[] gauche = EquipeService.GetJoueurs((Int16)next.IdEquipeGauche);
+        Joueur[] droite = EquipeService.GetJoueurs((Int16)next.IdEquipeDroite);
+        Arme[] armes = ArmeService.GetAll();
+        // tant que le match est pas fini
+        while (!TournoiService.IsMatchDone(next.IdTournoi, next.NoMatch))
+        {
+            // ajouter une manche
+            Carte cManche = cartes[rng.Next(cartes.Count)];
+            cartes.Remove(cManche);
+
+            Manche manche = new Manche();
+            manche.IdCarte = cManche.id;
+            manche.IdTournoi = next.IdTournoi;
+            manche.NoMatch = next.NoMatch;
+            manche.NoManche = NoManche;
+            NoManche++;
+            NoRound = 1;
+
+            TournoiService.AddManche(manche);
+
+            // simuler la manche
+            // tant que la manche est pas fini
+            while (!TournoiService.IsMancheDone(manche.IdTournoi, manche.NoMatch, manche.NoManche))
+            {
+                // ajouter un round
+                Round round = new Round();
+                round.IdTournoi = next.IdTournoi;
+                round.NoMatch = next.NoMatch;
+                round.NoManche = manche.NoManche;
+                round.NoRound = NoRound;
+                NoRound++;
+                NoKill = 1;
+
+                TournoiService.AddRound(round);
+                List<Joueur> g = new List<Joueur>();
+                g.AddRange(gauche);
+                List<Joueur> d = new List<Joueur>();
+                d.AddRange(droite);
+                // tant que le round n'est pas fini
+                while (!TournoiService.IsRoundDone(round.IdTournoi, round.NoMatch, round.NoManche, round.NoRound))
+                {
+                    // ajouter un kill
+                    Kill kill = new Kill();
+                    kill.IdTournoi = round.IdTournoi;
+                    kill.NoMatch = round.NoMatch;
+                    kill.NoManche = round.NoManche;
+                    kill.NoRound = round.NoRound;
+                    kill.NoKill = NoKill;
+                    NoKill++;
+                    Joueur tueur;
+                    Joueur mort;
+                    if(rng.Next(1) == 0)
+                    {
+                        // kill pour l'équipe de gauche
+                        tueur = g[rng.Next(g.Count)];
+                        mort = d[rng.Next(d.Count)];
+                        d.Remove(mort);
+                    }
+                    else
+                    {
+                        // kill pour l'équipe de droite
+                        tueur = d[rng.Next(g.Count)];
+                        mort = g[rng.Next(d.Count)];
+                        g.Remove(mort);
+                    }
+                    kill.IdTueur = tueur.Id;
+                    kill.IdMort = mort.Id;
+                    kill.IdArme = armes[rng.Next(armes.Length)].Id;
+                    TournoiService.AddKill(kill);
+                }
+            }
+        }
+    }
+
+    protected void SimulateAll()
+    {
+        // tant qu'il y a des match qui ne sont pas finis pour le tournoi
+        // SimulateOnce()
     }
 }
