--- a/BlazorApp/Projet_BDR/Pages/Joueur/Stat.razor
+++ b/BlazorApp/Projet_BDR/Pages/Joueur/Stat.razor
@@ -11,6 +11,7 @@
                 <th>Cl.</th>
                 <th>Pseudonyme</th>
                 <th @onclick=@((e) => FilterChangeClickEvent("nombrekill",e))>Nombre de kill</th>
+                <th @onclick=@((e) => FilterChangeClickEvent("nombremort",e))>Nombre de kill</th>
                 <th @onclick=@((e) => FilterChangeClickEvent("nombremanchejouee",e))>Nombre de manche jouée</th>
                 <th @onclick=@((e) => FilterChangeClickEvent("nombremanchegagnee",e))>Nombre de manche gagnée</th>
                 <th>Pourcentage manche gagnée</th>
@@ -23,6 +24,7 @@
                 <td>@(++count)</td>
                 <td>@v.Pseudonyme</td>
                 <td>@v.NombreKill</td>
+                <td>@v.NombreMort</td>
                 <td>@v.NombreMancheJouer</td>
                 <td>@v.NombreMancheGagnee</td>
                 <td>@if (v.NombreMancheJouer != 0)
@@ -47,7 +49,7 @@
     VJoueurStat[] vjs;
     string f;
     int count = 0;
-    string[] filters = { "nombrekill", "nombremanchejouer", "nombremanchegagnee" };
+    string[] filters = { "nombrekill","nombrekill", "nombremanchejouer", "nombremanchegagnee" };
 
     protected override void OnInitialized()
     {
