--- a/BlazorApp/Projet_BDR/Shared/NavMenu.razor
+++ b/BlazorApp/Projet_BDR/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi" aria-hidden="true"></span> Armes
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="agent">
+                <span class="oi" aria-hidden="true"></span> Agents
+            </NavLink>
+        </div>
     </nav>
 </div>
 
