--- a/BlazorApp/Projet_BDR/Pages/Agent/Index.razor
+++ b/BlazorApp/Projet_BDR/Pages/Agent/Index.razor
@@ -47,7 +47,7 @@
 
 @code {
     int no;
-    string option = "Nom";
+    String option = "Nom";
     VAgentStat[]? agents;
 
     protected override void OnInitialized()
