--- a/BlazorApp/Projet_BDR/Shared/NavMenu.razor
+++ b/BlazorApp/Projet_BDR/Shared/NavMenu.razor
@@ -20,11 +20,6 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="transferts">
-                <span class="oi" aria-hidden="true"></span> Transferts
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="joueur">
                 <span class="oi" aria-hidden="true"></span> Joueurs
             </NavLink>
@@ -39,6 +34,12 @@
                 <span class="oi" aria-hidden="true"></span> Agents
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="carte">
+                <span class="oi" aria-hidden="true"></span> Cartes
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
